# Atmosphere

./: .dockerignore  .gitignore  .gitmodules  Atmosphere.sln  README  docker-compose.yml
Atmosphere.API/: Atmosphere.API.csproj
Atmosphere.API/Properties/: launchSettings.json
Atmosphere.Application/: Atmosphere.Application.csproj
Atmosphere.BE/: Atmosphere.sln  Dockerfile
Atmosphere.BE/Atmosphere.API/: Atmosphere.API.csproj  Program.cs  appsettings.Development.json  appsettings.json
Atmosphere.BE/Atmosphere.API/Controllers/: AuthController.cs  ConfigurationController.cs  DeviceController.cs  MongoController.cs  MqttController.cs  ReadingController.cs  WebSocketController.cs
Atmosphere.BE/Atmosphere.API/Properties/: launchSettings.json
Atmosphere.BE/Atmosphere.Application/: Atmosphere.Application.csproj
Atmosphere.BE/Atmosphere.Application.Tests/: Atmosphere.Application.Tests.csproj
Atmosphere.BE/Atmosphere.Application/Configuration/: EmailConfiguration.cs
Atmosphere.BE/Atmosphere.Application/DTO/: AuthResponseDto.cs  BaseUserDto.cs  DeviceDto.cs  NotificationSettingsDto.cs  ReadingDto.cs  UserDto.cs  ValidationRuleDto.cs
Atmosphere.BE/Atmosphere.Application/Exceptions/: AuthException.cs
Atmosphere.BE/Atmosphere.Application/Extensions/: ExpressionExtensions.cs
Atmosphere.BE/Atmosphere.Application/Services/: IConfigService.cs  IDeviceService.cs  IDeviceStateService.cs  IMQTTService.cs  INotificationService.cs  ITokenService.cs  IUserService.cs  IWebSocketHub.cs  WebSocketHub.cs
Atmosphere.BE/Atmosphere.Application/WebSockets/: WebSocketPayload.cs  WebSocketPayloadType.cs  WebSocketWrapper.cs
Atmosphere.BE/Atmosphere.Core/: Atmosphere.Core.csproj  PagedList.cs  PasswordUtil.cs
Atmosphere.BE/Atmosphere.Core.Tests/: Atmosphere.Core.Tests.csproj  ConfigurationEntryTests.cs  DeviceTests.cs  ModelTests.cs  PasswordUtilTests.cs  UserTests.cs  ValidatorTests.cs
Atmosphere.BE/Atmosphere.Core/Consts/: AtmosphereClaimTypes.cs
Atmosphere.BE/Atmosphere.Core/Enums/: NotificationType.cs  ReadingType.cs  Severity.cs  UserRole.cs
Atmosphere.BE/Atmosphere.Core/Models/: BaseModel.cs  BaseUser.cs  ConfigurationEntry.cs  Device.cs  IUser.cs  Notification.cs  NotificationSettings.cs  Reading.cs  User.cs
Atmosphere.BE/Atmosphere.Core/Repositories/: IBaseRepository.cs  IConfigurationRepository.cs  IDeviceRepository.cs  IReadingRepository.cs  IUserRepository.cs
Atmosphere.BE/Atmosphere.Core/Rules/: IValidationRule.cs  RuleFactory.cs  TemperatureRule.cs
Atmosphere.BE/Atmosphere.Core/Services/: IReadingValidationService.cs  ReadingValidationService.cs
Atmosphere.BE/Atmosphere.Core/Validation/: IReadingValidator.cs  ReadingValidator.cs  ValidationRule.cs
Atmosphere.BE/Atmosphere.Infrastructure/: Atmosphere.Infrastructure.csproj
Atmosphere.BE/Atmosphere.Infrastructure.Tests/: Atmosphere.Infrastructure.Tests.csproj
Atmosphere.BE/Atmosphere.Services/: Atmosphere.Services.csproj  DeviceHub.cs  DeviceService.cs  DeviceStateService.cs  LinqSerializer.cs  MQTTService.cs
Atmosphere.BE/Atmosphere.Services.Tests/: Atmosphere.Services.Tests.csproj  ConfigServiceTests.cs  JwtTokenProviderTests.cs
Atmosphere.Core.Tests/: Atmosphere.Core.Tests.csproj
Atmosphere.RPI/: .gitignore  CMakeLists.txt  platformio.ini  pre_compiling_onewire.py
Atmosphere.RPI/include/: DHTSensor.h  FreeRTOSConfig.h  OneWireSensor.h  Reading.h  Sensor.h  config.h  core_http_config.h  lwipopts.h  mqtt.h  temp_reader.h
Atmosphere.RPI/include/tasks/: connect_task.h  mqtt_task.h  sensor_task.h
Atmosphere.RPI/lib/Models/: AuthResponseDto.cpp  AuthResponseDto.h  Authenticate.cpp  Authenticate.h  BaseUserDto.cpp  BaseUserDto.h  CreateReading.cpp  CreateReading.h  DeviceDto.cpp  DeviceDto.h  ReadingDto.cpp  ReadingDto.h  ReadingType.cpp  ReadingType.h  RegisterDevice.cpp  RegisterDevice.h  UserRole.cpp  UserRole.h
Atmosphere.RPI/lib/service/: AuthApi.cpp  AuthApi.h  ReadingApi.cpp  ReadingApi.h  Response.h  Service.cpp  Service.h
Atmosphere.RPI/src/: DHTSensor.cpp  OneWireSensor.cpp  main.cpp  mqtt.cpp  temp_reader.cpp
Atmosphere.RPI/src/tasks/: connect_task.cpp  mqtt_task.cpp  sensor_task.cpp
Atmosphere.Services/: Atmosphere.Services.csproj
Atmosphere.WebApp/: Dockerfile
Atmosphere.WebApp/atmosphere/: package.json
Tex/: analiza_wymagan.tex  bibliografia.bib  glowny.lof  glowny.lol  glowny.tex  implementacja.tex  podobne_rozwiazania.tex  podsumowanie.tex  praca.tex  prezentacja_systemu.tex  streszczenie.tex  streszczenie_ang.tex  testy.tex  trash  wipb.cls  wstep.tex  wybrane_technologie.tex
Tex/img/: connect_dev.eps  create_user.eps  custom_validation.eps  failedsignin.eps  services_coverage.eps  users.eps  validation_rule.eps
Tex/uml/: comms_diagram.eps  comms_diagram.puml  controller_class.eps  controller_class.puml  decorator.eps  decorator.puml  diagram_uzycia.puml  domain.eps  domain.puml  sensor_class.eps  sensor_class.puml  use_case_diagram.eps
WebApp/api/: Cargo.toml  README.md  swagger.json
WebApp/api/.openapi-generator/: FILES
WebApp/atmosphere-admin/: Cargo.toml  index.html  package.json
WebApp/atmosphere-admin/src/: app.rs  error.rs  lib.rs  main.rs
WebApp/atmosphere-admin/src/bindings/: mod.rs
WebApp/atmosphere-admin/src/components/: chart.rs  mod.rs  modal.rs  nav.rs  pagination.rs  user_context_provider.rs
WebApp/atmosphere-admin/src/components/config/: email_config.rs  mod.rs  validation_rule.rs
WebApp/atmosphere-admin/src/components/reading/: mod.rs  reading_list.rs  reading_list_entry.rs
WebApp/atmosphere-admin/src/hooks/: use_user_context.rs
WebApp/atmosphere-admin/src/js/: chart.ts  notifications.ts
WebApp/atmosphere-admin/src/models/: config.rs  mod.rs  notification_payload.rs  user.rs
WebApp/atmosphere-admin/src/pages/: home.rs  not_found.rs
WebApp/atmosphere-admin/src/routes/: create_user.rs  device_settings.rs  devices.rs  home.rs  mod.rs  settings.rs  signin.rs  users.rs
WebApp/atmosphere-admin/src/services/: config.rs  device.rs  mod.rs  reading.rs  user.rs  websocket.rs
WebApp/atmosphere-admin/static/: index.html  styles.scss
(+151 files in other folders)
